홈화면 수정

--- a/app/elements/base/base-home.html
+++ b/app/elements/base/base-home.html
@@ -14,7 +14,7 @@ Copyright © HatioLab Inc. All rights reserved.
  -->
 
 <dom-module id="base-home">
-  <template>
+	<template>
 		<style>
 			:host {
 				@apply --layout-flex;
@@ -112,7 +112,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				grid-row-end: 2;
 				grid-column-start: 2;
 				grid-column-end: 2;
-				background-color: rgba(255,255,255,.04);
+				background-color: rgba(255, 255, 255, .04);
 				fill: silver;
 			}
 
@@ -122,7 +122,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				grid-row-end: 3;
 				grid-column-start: 2;
 				grid-column-end: 2;
-				background-color: rgba(255,255,255,.04);
+				background-color: rgba(255, 255, 255, .04);
 				fill: silver;
 			}
 
@@ -132,7 +132,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				grid-row-end: 4;
 				grid-column-start: 2;
 				grid-column-end: 2;
-				background-color: rgba(255,255,255,.04);
+				background-color: rgba(255, 255, 255, .04);
 				fill: silver;
 			}
 
@@ -142,7 +142,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				grid-row-end: 2;
 				grid-column-start: 3;
 				grid-column-end: 3;
-				background-color: rgba(255,255,255,.04);
+				background-color: rgba(255, 255, 255, .04);
 			}
 
 			#august-sum {
@@ -151,7 +151,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				grid-row-end: 3;
 				grid-column-start: 3;
 				grid-column-end: 3;
-				background-color: rgba(255,255,255,.04);
+				background-color: rgba(255, 255, 255, .04);
 			}
 
 			#september-sum {
@@ -160,7 +160,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				grid-row-end: 4;
 				grid-column-start: 3;
 				grid-column-end: 3;
-				background-color: rgba(255,255,255,.04);
+				background-color: rgba(255, 255, 255, .04);
 			}
 
 			div.bottom-section {
@@ -225,180 +225,180 @@ Copyright © HatioLab Inc. All rights reserved.
 			<div class="top-section"></div>
 
 			<div id="july-text">
-				<span class="month">7월</span>
+				<span class="month">1월</span>
 			</div>
-			
+
 			<div id="chart-subtitle">물동량 추이
 				<!-- <span class="chart-info">전월 최대<br></span>
 				<span class="chart-info">전월 최소<br></span>
 				<span class="chart-info">단위: PCS</span> -->
 			</div>
-			
+
 			<div id="july-chart-container">
 				<div id="july-chart"></div>
 			</div>
-			
+
 			<div id="sum-subtitle">누적합계</div>
-			
+
 			<div id="july-sum">
 				<span class="sum-text">1,123,456</span>
 				<span class="percent">5%<div class="arrow-down"></div></span>
 			</div>
-			
+
 			<div id="august-text">
-				<span class="month">8월</span>
+				<span class="month">2월</span>
 			</div>
-			
+
 			<div id="august-chart-container">
 				<div id="august-chart"></div>
 			</div>
-			
+
 			<div id="august-sum">
 				<span class="sum-text">1,324,456</span>
 				<span class="percent">13%<div class="arrow-up"></div></span>
 			</div>
-			
+
 			<div id="september-text">
-				<span class="month">9월</span>
+				<span class="month">3월</span>
 			</div>
-			
+
 			<div id="september-chart-container">
 				<div id="september-chart"></div>
 			</div>
-			
+
 			<div id="september-sum">
 				<span class="sum-text">823,456</span>
 				<span class="percent">8%<div class="arrow-up"></div></span>
 			</div>
-			
+
 			<div class="bottom-section">
 				<span class="bottom-text">이번 달은 <br>같은 기간 상승/하락</span>
 			</div>
 		</div>
-  </template>
+	</template>
 
-  <script>
-    Polymer({
-      is: 'base-home',
+	<script>
+		Polymer({
+			is: 'base-home',
 
-      behaviors: [],
+			behaviors: [],
 
-      properties: {},
+			properties: {},
 
-      listeners: {},
+			listeners: {},
 
-      attached: function() {
-        setTimeout(function() {
-          this._renderJulyChart(50);
-          this._renderAugustChart(50);
-          this._renderSeptemberChart(50);
-        }.bind(this), 2000)
+			attached: function () {
+				setTimeout(function () {
+					this._renderJulyChart(50);
+					this._renderAugustChart(50);
+					this._renderSeptemberChart(50);
+				}.bind(this), 2000)
 
-      },
+			},
 
-      /**
-       * 7월 차트 렌더링
-       *******************
-       * @param {Number} rate
-       */
-      _renderJulyChart: function(rate) {
-        var legend = Things.DataGlobal.t('label.progress_rate');
+			/**
+			 * 7월 차트 렌더링
+			 *******************
+			 * @param {Number} rate
+			 */
+			_renderJulyChart: function (rate) {
+				var legend = Things.DataGlobal.t('label.progress_rate');
 
-        if (this.julyChart) {
-          this.julyChart.load({
-            columns: [
-              [legend, rate]
-            ]
-          });
+				if (this.julyChart) {
+					this.julyChart.load({
+						columns: [
+							[legend, rate]
+						]
+					});
 
-        } else {
-          this.julyChart = c3.generate({
-            bindto: this.$['july-chart'],
-            data: {
-              x: 'x',
-              columns: [
-                ['x', 10, 20, 30, 40, 50, 60, 70, 80],
-                ['data1', 1100, 1200, 1150, 1200, 1250, 1100]
-              ]
-            },
-            color: {
-              pattern: ['#60B044', '#60B044'],
-              threshold: {
-                values: [30, 60, 90, 100]
-              }
-            }
-          })
-        }
-      },
+				} else {
+					this.julyChart = c3.generate({
+						bindto: this.$['july-chart'],
+						data: {
+							x: 'x',
+							columns: [
+								['x', 10, 20, 30, 40, 50, 60, 70, 80],
+								['data1', 1100, 1200, 1150, 1200, 1250, 1100]
+							]
+						},
+						color: {
+							pattern: ['#60B044', '#60B044'],
+							threshold: {
+								values: [30, 60, 90, 100]
+							}
+						}
+					})
+				}
+			},
 
-      /**
-       * 8월 차트 렌더링
-       *******************
-       * @param {Number} rate
-       */
-      _renderAugustChart: function(rate) {
-        var legend = Things.DataGlobal.t('label.progress_rate');
+			/**
+			 * 8월 차트 렌더링
+			 *******************
+			 * @param {Number} rate
+			 */
+			_renderAugustChart: function (rate) {
+				var legend = Things.DataGlobal.t('label.progress_rate');
 
-        if (this.augustChart) {
-          this.augustChart.load({
-            columns: [
-              [legend, rate]
-            ]
-          });
+				if (this.augustChart) {
+					this.augustChart.load({
+						columns: [
+							[legend, rate]
+						]
+					});
 
-        } else {
-          this.augustChart = c3.generate({
-            bindto: this.$['august-chart'],
-            data: {
-              x: 'x',
-              columns: [
-                ['x', 10, 20, 30, 40, 50, 60, 70, 80],
-                ['data2', 1300, 1200, 1150, 1100, 1250, 1150]
-              ]
-            },
-            color: {
-              pattern: ['#60B044', '#60B044'],
-              threshold: {
-                values: [30, 60, 90, 100]
-              }
-            }
-          })
-        }
-      },
+				} else {
+					this.augustChart = c3.generate({
+						bindto: this.$['august-chart'],
+						data: {
+							x: 'x',
+							columns: [
+								['x', 10, 20, 30, 40, 50, 60, 70, 80],
+								['data2', 1300, 1200, 1150, 1100, 1250, 1150]
+							]
+						},
+						color: {
+							pattern: ['#60B044', '#60B044'],
+							threshold: {
+								values: [30, 60, 90, 100]
+							}
+						}
+					})
+				}
+			},
 
-      /**
-       * 9월 차트 렌더링
-       *******************
-       * @param {Number} rate
-       */
-      _renderSeptemberChart: function(rate) {
-        var legend = Things.DataGlobal.t('label.progress_rate');
+			/**
+			 * 9월 차트 렌더링
+			 *******************
+			 * @param {Number} rate
+			 */
+			_renderSeptemberChart: function (rate) {
+				var legend = Things.DataGlobal.t('label.progress_rate');
 
-        if (this.septemberChart) {
-          this.septemberChart.load({
-            columns: [
-              [legend, rate]
-            ]
-          });
+				if (this.septemberChart) {
+					this.septemberChart.load({
+						columns: [
+							[legend, rate]
+						]
+					});
 
-        } else {
-          this.septemberChart = c3.generate({
-            bindto: this.$['september-chart'],
-            data: {
-              x: 'x',
-              columns: [
-                ['x', 10, 20, 30, 40, 50, 60, 70, 80],
-                ['data1', 1100, 1150, 1100, 1200, 1250, 1150],
-                ['red', 1200, 1200, 1200, 1200, 1200, 1200],
-                ['blue', 350, 350, 350, 350, 350, 350]
-              ]
-            },
-            color: {
-              pattern: ['#60B044', '#FF0000', '#0000FF']
-            }
-          })
-        }
-      }
-    })
-  </script>
+				} else {
+					this.septemberChart = c3.generate({
+						bindto: this.$['september-chart'],
+						data: {
+							x: 'x',
+							columns: [
+								['x', 10, 20, 30, 40, 50, 60, 70, 80],
+								['data1', 1100, 1150, 1100, 1200, 1250, 1150],
+								['red', 1200, 1200, 1200, 1200, 1200, 1200],
+								['blue', 350, 350, 350, 350, 350, 350]
+							]
+						},
+						color: {
+							pattern: ['#60B044', '#FF0000', '#0000FF']
+						}
+					})
+				}
+			}
+		})
+	</script>
 </dom-module>
