--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -8,5 +8,5 @@
 <link rel="import" href="./gw-ind.html" />
 <link rel="import" href="./invoice-no.html" />
 <link rel="import" href="./job-batch.html" />
-<link rel="import" href="./rtn-preprocess.html" />
+<link rel="import" href="./das-preprocess.html" />
 <link rel="import" href="./sms-preprocess.html" />
