--- a/app/elements/logis/job-batch-rtn-instruct-popup.html
+++ b/app/elements/logis/job-batch-rtn-instruct-popup.html
@@ -25,69 +25,51 @@ Copyright © HatioLab Inc. All rights reserved.
 				display: grid;
 				grid-template-rows: auto auto auto 1fr;
 			}
+
 			#progress-bar {
 				padding: 2px;
 				padding-left: 20px;
 				padding-right: 20px;
 				width: unset;
 				--paper-progress-active-color: var(--paper-light-blue-500);
-    		--paper-progress-secondary-color: var(--paper-light-blue-100);
+				--paper-progress-secondary-color: var(--paper-light-blue-100);
 			}
+
 			#progress-rate {
 				padding-left: 25px
 			}
 		</style>
 
 		<!-- 주문 가공 완료 정보 조회 Ajax -->
-		<things-ajax
-			id="job-list-ajax" 
-			resource-url="job_batches/:id/instruction_data "
-			resource-id="[[batchId]]"
+		<things-ajax id="job-list-ajax" resource-url="job_batches/:id/instruction_data " resource-id="[[batchId]]"
 			content-type="application/json">
 		</things-ajax>
 
 		<!-- 주문 가공 데이터 완료 Ajax -->
-    	<things-ajax
-      		id="complete-preprocessing-ajax"
-      		resource-url="rtn_preprocess/:id/complete"
-      		resource-action="update">
-    	</things-ajax>
+		<things-ajax id="complete-preprocessing-ajax" resource-url="rtn_preprocess/:id/complete"
+			resource-action="update">
+		</things-ajax>
 
 		<!-- 작업 지시 Ajax -->
-    	<things-ajax
-      		id="job-instruction-ajax"
-      		resource-url="job_batch/:id/instruct_job"
-      		resource-action="create">
-    	</things-ajax>
+		<things-ajax id="job-instruction-ajax" resource-url="job_batches/:id/instruct/batch" resource-action="create">
+		</things-ajax>
 
 		<!-- 작업 지시 진행 상황 조회 Ajax -->
-    	<things-ajax
-      		id="progress-instruction-ajax"
-      		resource-url="job_batch/:id/instruct_job/progress"
-			method="GET">
-    	</things-ajax>
+		<things-ajax id="progress-instruction-ajax" resource-url="job_batches/:id/instruct_job/progress" method="GET">
+		</things-ajax>
 
 		<!-- 팝업 상단 작업 지시 요약 폼 -->
-		<things-resource-form
-			id="resource-form"
-			form-fields="[[searchFormFields]]"
-			column-count="3"
+		<things-resource-form id="resource-form" form-fields="[[searchFormFields]]" column-count="3"
 			buttons="[[emptyButton]]">
 		</things-resource-form>
 
 		<!-- 프로그레스 바 -->
-		<div id="progress-rate">[[progressRate]]%  [[progressMessage]]</div>
+		<div id="progress-rate">[[progressRate]]% [[progressMessage]]</div>
 		<paper-progress id="progress-bar" value="[[progressRate]]"></paper-progress>
 
 		<!-- 주문 가공 정보 그리드 -->
-		<things-resource-grid
-			id="grid"
-			config="[[gridConfig]]"
-			model="[[gridModel]]"
-			columns="[[gridColumns]]"
-			data="[[jobList]]"
-			buttons="[[buttons]]"
-			fixed-column-count="0">
+		<things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[gridColumns]]"
+			data="[[jobList]]" buttons="[[buttons]]" fixed-column-count="0">
 		</things-resource-grid>
 	</template>
 
@@ -117,13 +99,13 @@ Copyright © HatioLab Inc. All rights reserved.
 				 */
 				gridConfig: {
 					type: Object,
-					value: function() {
+					value: function () {
 						return {
 							options: {
-                 				checkBar: {
-                   					visible: false
-                 				}
-               				},
+								checkBar: {
+									visible: false
+								}
+							},
 
 							displayOptions: {
 								fitStyle: 'evenFill'
@@ -139,7 +121,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				 */
 				gridModel: {
 					type: Array,
-					value: function() {
+					value: function () {
 						return [{
 							fieldName: 'id',
 						}, {
@@ -180,7 +162,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				 */
 				gridColumns: {
 					type: Array,
-					value: function() {
+					value: function () {
 						return [{
 							name: 'id',
 							fieldName: 'id',
@@ -281,7 +263,7 @@ Copyright © HatioLab Inc. All rights reserved.
 								textAlignment: 'far'
 							},
 							editable: false,
-							visible : false
+							visible: false
 						}]
 					}
 				},
@@ -293,7 +275,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				 */
 				buttons: {
 					type: Array,
-					value: function() {
+					value: function () {
 						return [{
 							id: 'job_instruct',
 							text: 'job_instruct'
@@ -360,8 +342,8 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {String} batchId
 			 */
-			_batchIdChanged: function(batchId) {
-				if(batchId) {
+			_batchIdChanged: function (batchId) {
+				if (batchId) {
 					var jobListAjax = this.$['job-list-ajax'];
 					jobListAjax.generateRequest();
 				}
@@ -373,7 +355,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_jobListResponsed: function(event) {
+			_jobListResponsed: function (event) {
 				this.jobList = event.detail.list;
 				var totalCustCnt = event.detail.custCnt;
 				var totalSkuCnt = event.detail.skuCnt;
@@ -390,7 +372,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_infoFormConfigure: function(event) {
+			_infoFormConfigure: function (event) {
 				var newFormFields = [{
 					label: Things.DataGlobal.t('label.total_customers'),
 					name: 'total_customers',
@@ -413,7 +395,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_infoFormConfigured: function(event) {
+			_infoFormConfigured: function (event) {
 				this.batchId = this.formData['id'];
 				this.$['resource-form'].setFormData(this.formData);
 			},
@@ -423,7 +405,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_onGridConfigured: function(event) {
+			_onGridConfigured: function (event) {
 				// 주문 가공 완료시 로우 색상을 변경하기 위한 grid 설정 추가
 				this.setGridDynamicRowStyle(event.target);
 			},
@@ -433,7 +415,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} grid
 			 */
-			setGridDynamicRowStyle: function(grid) {
+			setGridDynamicRowStyle: function (grid) {
 				var gridObject = grid.getGridObject();
 				var gridBody = gridObject.body();
 				gridBody.setCellDynamicStyles({
@@ -450,15 +432,15 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			instructJob: function(event) {
+			instructJob: function (event) {
 				var title = Things.DataGlobal.t('button.job_instruct')
 				var ajax = this.$['job-instruction-ajax'];
-				var text = Things.DataGlobal.t('text.Sure to X', { x : title });
+				var text = Things.DataGlobal.t('text.Sure to X', { x: title });
 				var self = this;
 
 				this.openConfirmMsg({
-					type : 'info', title : title, text : text, showCancelButton : true
-				}, function() {
+					type: 'info', title: title, text: text, showCancelButton: true
+				}, function () {
 					self.isFinished = false;
 					ajax.resourceId = self.batchId;
 					ajax.generateRequest();
@@ -471,7 +453,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_jobInstructionProgressing: function(event) {
+			_jobInstructionProgressing: function (event) {
 				this.jobList = event.detail;
 				// 전체 거래처 개수에 처리 완료 카운트로 현재 진행율 계산하여 프로그레스 바 표시
 				var totalOrdCnt = this.jobList.length; // 처리 대상 주문 개수
@@ -481,7 +463,7 @@ Copyright © HatioLab Inc. All rights reserved.
 				// 전체 중 완료된 백분위 계산 후 progressRate에 초기화하여 progress-bar 상태 변경
 				this.progressRate = (processedCnt / totalOrdCnt * 100).toFixed(2);
 
-				if(!this.isFinished) {
+				if (!this.isFinished) {
 					this.async(this._showJobInstructionProgress, 1500);
 				}
 			},
@@ -490,7 +472,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 * 주문 가공 진행 상황 요청
 			 ***************
 			 */
-			_showJobInstructionProgress: function() {
+			_showJobInstructionProgress: function () {
 				// if(parseInt(this.progressRate) < 100) {
 				// 	this.progressMessage = '(' + Things.DataGlobal.t('text.please_wait') + ')';
 				// 	var progressAjax = this.$['progress-instruction-ajax'];
@@ -504,7 +486,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_onJobInstructionSuccess: function(event) {
+			_onJobInstructionSuccess: function (event) {
 				this.isFinished = true;
 				var title = Things.DataGlobal.t('text.Success to Process');
 				var text = Things.DataGlobal.t('button.job_instruct') + ' ' + Things.DataGlobal.t('text.processed');
@@ -516,7 +498,7 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Object} event
 			 */
-			_onJobInstructionError: function(event) {
+			_onJobInstructionError: function (event) {
 				this.isFinished = true;
 			},
 
@@ -525,10 +507,10 @@ Copyright © HatioLab Inc. All rights reserved.
 			 ***************
 			 * @param {Number} progressRate
 			 */
-			_progressRateChanged: function(progressRate) {
-				if(progressRate > 99.99) {
+			_progressRateChanged: function (progressRate) {
+				if (progressRate > 99.99) {
 					// 작업 지시 처리 완료했습니다
-					var msg = Things.DataGlobal.t('text.x_is_done', { x : Things.DataGlobal.t('text.instruct_job') });
+					var msg = Things.DataGlobal.t('text.x_is_done', { x: Things.DataGlobal.t('text.instruct_job') });
 					this.progressMessage = '(' + msg + ')';
 				}
 			}
