--- a/app/elements/logis/das-preprocess.html
+++ b/app/elements/logis/das-preprocess.html
@@ -327,22 +327,22 @@ Copyright © HatioLab Inc. All rights reserved.
           type: Array,
           value: function() {
             return [{
-              fieldName: 'total_skus',
+              fieldName: 'total_order_cnt',
               dataType: 'number'
             }, {
-              fieldName: 'assigned_sku',
+              fieldName: 'assigned_order_cnt',
               dataType: 'number'
             }, {
-              fieldName: 'remain_sku',
+              fieldName: 'remain_order_cnt',
               dataType: 'number'
             }, {
-              fieldName: 'total_orders_pcs',
+              fieldName: 'total_order_pcs',
               dataType: 'number'
             }, {
-              fieldName: 'assigned_pcs',
+              fieldName: 'assigned_order_pcs',
               dataType: 'number'
             }, {
-              fieldName: 'remain_pcs',
+              fieldName: 'remain_order_pcs',
               dataType: 'number'
             }];
           }
@@ -357,8 +357,8 @@ Copyright © HatioLab Inc. All rights reserved.
           type: Array,
           value: function() {
             return [{
-              name: 'total_skus',
-              fieldName: 'total_skus',
+              name: 'total_order_cnt',
+              fieldName: 'total_order_cnt',
               width: 60,
               header: {
                 text: Things.DataGlobal.t('label.total_sku')
@@ -369,8 +369,8 @@ Copyright © HatioLab Inc. All rights reserved.
               },
               editable: false
             }, {
-              name: 'assigned_sku',
-              fieldName: 'assigned_sku',
+              name: 'assigned_order_cnt',
+              fieldName: 'assigned_order_cnt',
               width: 60,
               header: {
                 text: Things.DataGlobal.t('label.assigned_sku')
@@ -381,8 +381,8 @@ Copyright © HatioLab Inc. All rights reserved.
               },
               editable: false
             }, {
-              name: 'remain_sku',
-              fieldName: 'remain_sku',
+              name: 'remain_order_cnt',
+              fieldName: 'remain_order_cnt',
               width: 60,
               header: {
                 text: Things.DataGlobal.t('label.remain_sku')
@@ -393,8 +393,8 @@ Copyright © HatioLab Inc. All rights reserved.
               },
               editable: false
             }, {
-              name: 'total_orders_pcs',
-              fieldName: 'total_orders_pcs',
+              name: 'total_order_pcs',
+              fieldName: 'total_order_pcs',
               width: 60,
               header: {
                 text: Things.DataGlobal.t('label.total_pcs')
@@ -405,8 +405,8 @@ Copyright © HatioLab Inc. All rights reserved.
               },
               editable: false
             }, {
-              name: 'assigned_pcs',
-              fieldName: 'assigned_pcs',
+              name: 'assigned_order_pcs',
+              fieldName: 'assigned_order_pcs',
               width: 60,
               header: {
                 text: Things.DataGlobal.t('label.assigned_pcs')
@@ -417,8 +417,8 @@ Copyright © HatioLab Inc. All rights reserved.
               },
               editable: false
             }, {
-              name: 'remain_pcs',
-              fieldName: 'remain_pcs',
+              name: 'remain_order_pcs',
+              fieldName: 'remain_order_pcs',
               width: 60,
               header: {
                 text: Things.DataGlobal.t('label.remain_pcs')
@@ -451,10 +451,10 @@ Copyright © HatioLab Inc. All rights reserved.
               fieldName: 'assigned_cells',
               dataType: 'number'
             }, {
-              fieldName: 'assigned_sku',
+              fieldName: 'assigned_order_cnt',
               dataType: 'number'
             }, {
-              fieldName: 'assigned_pcs',
+              fieldName: 'assigned_order_pcs',
               dataType: 'number'
             }];
           }
@@ -542,8 +542,8 @@ Copyright © HatioLab Inc. All rights reserved.
               },
               editable: false
             }, {
-              name: 'assigned_pcs',
-              fieldName: 'assigned_pcs',
+              name: 'assigned_order_pcs',
+              fieldName: 'assigned_order_pcs',
               width: 80,
               header: {
                 text: Things.DataGlobal.t('label.assigned_pcs')
@@ -642,7 +642,7 @@ Copyright © HatioLab Inc. All rights reserved.
           case 'region-grid':
             {
               e.target.grid.checkBar().setCheckableCallback(function(grid, row) {
-                var rackCd = row.getValue("rack_cd")
+                var rackCd = row.getValue('rack_cd')
                 return !(rackCd === '[ALL]' || rackCd === '');
               });
               e.target.grid.checkBar().setHideUncheckable(true);
@@ -660,11 +660,10 @@ Copyright © HatioLab Inc. All rights reserved.
         var query = form.request.params.query;
         var queryArr = (typeof(query) == 'string') ? JSON.parse(query) : query ? query : [];
         var realQuery = queryArr.filter(function(query) {
-          //          return (query.name == 'batch_id' || query.name == 'rack_cd');
           return (query.name == 'rack_cd' || query.name == 'id');
         });
-        form.request.params.query = JSON.stringify(realQuery);
 
+        form.request.params.query = JSON.stringify(realQuery);
         this.batchId = this._getCurrentBatchId();
       },
 
@@ -676,10 +675,10 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} event
        */
       _regionGridSelected: function(event) {
-        var selectedRegionObj = event.detail.row;
-        if (selectedRegionObj) {
-          this.selectedRegion = selectedRegionObj.rack_cd;
+        var selectedRack = event.detail.row;
 
+        if (selectedRack) {
+          this.selectedRegion = selectedRack.rack_cd;
           var cellName = event.detail.cell.column.name();
 
           if (cellName === 'assign_icon') { // 할당 리스트 조회
@@ -795,6 +794,7 @@ Copyright © HatioLab Inc. All rights reserved.
         } else {
           this.items = [];
         }
+
         this.groupSummaryData = [summary];
         this.$['search-form'].setFormData({
           id: this.batchId
@@ -807,7 +807,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} e 버튼 탭 이벤트
        */
       goBack: function(e) {
-        page('/job_batch', {});
+        page('/b2b_job_batches', {});
       },
 
       /**
@@ -871,7 +871,7 @@ Copyright © HatioLab Inc. All rights reserved.
             if (chkCount < toAssignItems.length) {
               this.openInfoMsg({
                 type: 'info',
-                title: '잔여셀보다 주문을 많게 지정했습니다.',
+                title: '잔여 셀보다 주문을 많게 지정했습니다.',
                 closeOnConfirm: true
               });
               return;
@@ -1097,8 +1097,8 @@ Copyright © HatioLab Inc. All rights reserved.
           regionItems.forEach(function(item) {
             totalAssigned += isNaN(item.assigned_cells) ? 0 : item.assigned_cells;
             totalRemained += isNaN(item.remain_cells) ? 0 : item.remain_cells;
-            totalAssignedSku += isNaN(item.assigned_sku) ? 0 : item.assigned_sku;
-            totalAssignedPcs += isNaN(item.assigned_pcs) ? 0 : item.assigned_pcs;
+            totalAssignedSku += isNaN(item.assigned_order_cnt) ? 0 : item.assigned_order_cnt;
+            totalAssignedPcs += isNaN(item.assigned_order_pcs) ? 0 : item.assigned_order_pcs;
           });
 
           regionItems.unshift({
@@ -1106,8 +1106,8 @@ Copyright © HatioLab Inc. All rights reserved.
             rack_nm: '',
             assigned_cells: null,
             remain_cells: null,
-            assigned_sku: null,
-            assigned_pcs: null
+            assigned_order_cnt: null,
+            assigned_order_pcs: null
           });
 
           regionItems.unshift({
@@ -1115,8 +1115,8 @@ Copyright © HatioLab Inc. All rights reserved.
             rack_nm: '[ALL]',
             assigned_cells: totalAssigned,
             remain_cells: totalRemained,
-            assigned_sku: totalAssignedSku,
-            assigned_pcs: totalAssignedPcs
+            assigned_order_cnt: totalAssignedSku,
+            assigned_order_pcs: totalAssignedPcs
           });
           this.regionItems = regionItems;
 
