--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -10,3 +10,4 @@
 <link rel="import" href="./job-batch.html" />
 <link rel="import" href="./das-preprocess.html" />
 <link rel="import" href="./sms-preprocess.html" />
+<link rel="import" href="./sms-control.html" />
